# graphgarden

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  PROTOCOL.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml
.github/workflows/: ci.yml  release.yml
.sampo/changesets/: fearless-duke-vellamo.md  initial-release.md  mighty-runesinger-sampsa.md  radiant-flamebinder-ukko.md  valorous-thunderbearer-tuoni.md  verdant-stormweaver-vainamoinen.md
crates/graphgarden/: CHANGELOG.md  Cargo.toml  README.md
crates/graphgarden-core/: CHANGELOG.md  Cargo.toml  README.md
crates/graphgarden-core/src/: build.rs  config.rs  error.rs  extract.rs  fetch.rs  lib.rs  model.rs
crates/graphgarden-protocol/: CHANGELOG.md  Cargo.toml  README.md
crates/graphgarden-protocol/src/: lib.rs
crates/graphgarden/src/: main.rs
crates/graphgarden/tests/: cli.rs
fixtures/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
fixtures/alice/: astro.config.mjs  graphgarden.toml  package.json  pnpm-lock.yaml
fixtures/alice/src/pages/: about.astro  index.astro
fixtures/alice/src/pages/species/: european-rabbit.astro  mountain-hare.astro
fixtures/bob/: graphgarden.json
fixtures/tests/: pipeline.test.ts  test-setup.ts
