[package]
name = "graphgarden-core"
version = "0.1.0"
description = "Core library for GraphGarden — crawl websites and build a node graph of pages and links"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
globset = "0.4"
jiff = "0.2"
lol_html = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
