[package]
name = "graphgarden-core"
version = "0.1.0"
description = "Core library implementing the GraphGarden protocol — crawl a site and build its link graph"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
graphgarden-protocol = { path = "../graphgarden-protocol" , version = "0.1.0" }
globset = "0.4"
jiff = "0.2"
lol_html = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
url = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
