[package]
name = "graphgarden"
version = "0.1.0"
description = "CLI for GraphGarden — crawl a site and generate its protocol file"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "graphgarden"
path = "src/main.rs"

[dependencies]
graphgarden-core = { path = "../graphgarden-core" }
