[package]
name = "graphgarden"
version = "0.1.0"
description = "CLI for GraphGarden — crawl a site and generate its protocol file"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "graphgarden"
path = "src/main.rs"

[dependencies]
graphgarden-core = { path = "../graphgarden-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
